250 - Timeline tooltip - fixing the overflow hidden

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -4,7 +4,6 @@
     height: 250px;
     margin: 15px 0;
     border-radius: 3px;
-    overflow: hidden;
     box-shadow: rgba(158, 158, 158, 0.16) 1px 1px 8px 0px;
     position: relative;
 }
